--- a/graphs/graphs.ipynb
+++ b/graphs/graphs.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>References</b>\n",
+    "<b>References and resources:</b>\n",
     "- Python Data Structures and Algorithms by Benjamin Baka\n",
     "- [Two way to represent graphs](https://www.youtube.com/watch?v=HDUzBEG1GlA&index=6&list=PLj8W7XIvO93qsmdxbaDpIvM1KCyNO1K_c)\n",
     "    - [Graph adjacency list](https://github.com/joeyajames/Python/blob/master/graph_adjacency-list.py)\n",
@@ -24,6 +24,19 @@
     "\n",
     "<b>Tools:</b>\n",
     "- [Create graph images](https://www.draw.io/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Uncomment to use inline pythontutor\n",
+    "\n",
+    "# from IPython.display import IFrame\n",
+    "\n",
+    "# IFrame('http://www.pythontutor.com/visualize.html#mode=display', height=1500, width=750)"
    ]
   },
   {
