--- a/hashing/hashing.ipynb
+++ b/hashing/hashing.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>References</b>\n",
+    "<b>References and resources:</b>\n",
     "\n",
     "- Python Data Structures and Algorithms by Benjamin Baka\n",
     "- [Hashmaps using lists](https://www.youtube.com/watch?v=9HFbhPscPU0)"
