--- a/linked_lists/circularly_linked_lists.ipynb
+++ b/linked_lists/circularly_linked_lists.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>References</b>\n",
+    "<b>References and resources:</b>\n",
     "- Python Data Structures and Algorithms by Benjamin Baka\n",
     "- [Circular linked list](https://www.youtube.com/watch?v=3bmCGdh0jS8&index=6&list=PLj8W7XIvO93rx6hFr6H3Un4Ezpg1iUpOG)\n",
     "- [Wikipedia](https://en.wikipedia.org/wiki/Linked_list#Circular_linked_list)"
