--- a/linked_lists/singly_linked_lists.ipynb
+++ b/linked_lists/singly_linked_lists.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>References</b>\n",
+    "<b>References and resources:</b>\n",
     "- Python Data Structures and Algorithms by Benjamin Baka\n",
     "- [Linked lists](https://www.youtube.com/watch?v=Bd1L64clh34&list=PLj8W7XIvO93rx6hFr6H3Un4Ezpg1iUpOG)\n",
     "- [Sorting a linked list](https://www.youtube.com/watch?v=Xk0Tgh1AbfE&list=PLj8W7XIvO93rx6hFr6H3Un4Ezpg1iUpOG&index=5)\n",
