--- a/trees/2_3_trees.ipynb
+++ b/trees/2_3_trees.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>References</b>\n",
+    "<b>References and resources:</b>\n",
     "- [Python: 2-3 Trees](https://www.youtube.com/watch?v=vSbBB4MRzp4&list=PLj8W7XIvO93pxkcN56W1WRYve4kvN_njq&index=5)\n",
     "- [2-3 Tree Insertion](https://www.youtube.com/watch?v=bhKixY-cZHE)\n",
     "- [Wikipedia](https://en.wikipedia.org/wiki/2%E2%80%933_tree)"
