--- a/trees/binary_search_trees.ipynb
+++ b/trees/binary_search_trees.ipynb
@@ -124,7 +124,7 @@
     "\n",
     "<b>Full:</b> A full binary tree is a binary tree in which each node has exactly zero or two children.\n",
     "    \n",
-    "<b>Complete:</b> A complete binary tree is a binary tree, which is completely filled, with the possible exception of the bottom level, which is filled from left to right.\n",
+    "<b>Complete:</b> A complete binary tree is a binary tree which is completely filled, with the possible exception of the bottom level, which is filled from left to right.\n",
     "\n",
     "<b>Balanced:</b> When the differnece of height of subtrees are <= 1\n",
     "\n",
@@ -163,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>References:</b>\n",
+    "<b>References and resources:</b>\n",
     "\n",
     "- Code\n",
     "  - [Part 1](https://www.youtube.com/watch?v=1WxLM2hwL-U)\n",
@@ -178,6 +178,19 @@
     "  - [Level-order](https://www.youtube.com/watch?v=IozGo2kwRYE)\n",
     "  \n",
     " [Wikipeida](https://en.wikipedia.org/wiki/Binary_search_tree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Uncomment to use inline pythontutor\n",
+    "\n",
+    "# from IPython.display import IFrame\n",
+    "\n",
+    "# IFrame('http://www.pythontutor.com/visualize.html#mode=display', height=1500, width=750)"
    ]
   },
   {
