--- a/linked_lists/doubly_linked_lists.ipynb
+++ b/linked_lists/doubly_linked_lists.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>References</b>\n",
+    "<b>References and resources:</b>\n",
     "- Python Data Structures and Algorithms by Benjamin Baka\n",
     "- [Doubly linked lists](https://www.youtube.com/watch?v=sDP_pReYNEc&list=PLj8W7XIvO93rx6hFr6H3Un4Ezpg1iUpOG&index=3)\n",
     "- [Wikipedia](https://en.wikipedia.org/wiki/Linked_list#Doubly_linked_list)"
