--- a/stacks_and_queues/queues.ipynb
+++ b/stacks_and_queues/queues.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>References</b>\n",
+    "<b>References and resources:</b>\n",
     "- Python Data Structures and Algorithms by Benjamin Baka\n",
     "- [Queues by Study Tonight](https://www.studytonight.com/data-structures/queue-data-structure)"
    ]
