--- a/stacks_and_queues/stacks.ipynb
+++ b/stacks_and_queues/stacks.ipynb
@@ -21,14 +21,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>References</b>\n",
+    "<b>References and resources:</b>\n",
     "- Python Data Structures and Algorithms by Benjamin Baka\n",
     "- [Stacks by Study Tonight](https://www.studytonight.com/data-structures/stack-data-structure)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
