--- a/heaps/max_min_heaps.ipynb
+++ b/heaps/max_min_heaps.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Heaps\n",
     "\n",
-    "a heap is a specialized tree-based data structure which is essentially an almost complete tree that satisfies the heap property. The heap property states that there must be a relationship between a parent and child nodes.\n",
+    "A heap is a specialized tree-based data structure which is essentially an almost complete tree that satisfies the heap property. The heap property states that there must be a relationship between a parent and child nodes.\n",
     "\n",
     "Heaps can be represented by a list due to its need to be a complete binary tree.<sup>[1]</sup>\n",
     "\n",
