Interpolation search and slight README edit

--- a/searching/binary_search.ipynb
+++ b/searching/binary_search.ipynb
@@ -17,7 +17,8 @@
    "source": [
     "<b>References and resources:</b>\n",
     "- Python Data Structures and Algorithms by Benjamin Baka\n",
-    "- [Wikipedia](https://en.wikipedia.org/wiki/Linear_search)"
+    "- [Wikipedia](https://en.wikipedia.org/wiki/Linear_search)\n",
+    "- https://stackoverflow.com/questions/19989910/recursion-binary-search-in-python"
    ]
   },
   {
@@ -28,7 +29,7 @@
    "source": [
     "def binary_search(ordered_list, term):\n",
     "    \"\"\"\n",
-    "    Iterative solution\n",
+    "    Iterative solution.\n",
     "    \"\"\"\n",
     "    size_of_list = len(ordered_list) - 1\n",
     "    index_of_first_element = 0\n",
@@ -73,25 +74,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "def binary_search_r(ordered_list, first_element_index, last_element_index, term):\n",
-    "    if last_element_index <"
+    "    \"\"\"\n",
+    "    Recursive solution.\n",
+    "    \"\"\"\n",
+    "    if last_element_index < first_element_index:\n",
+    "        return 'Element not found'\n",
+    "    else:\n",
+    "        mid_point = first_element_index + ((last_element_index - first_element_index) // 2)\n",
+    "        if ordered_list[mid_point] > term:\n",
+    "            return binary_search_r(ordered_list, first_element_index, mid_point - 1, term)\n",
+    "        elif ordered_list[mid_point] < term:\n",
+    "            return binary_search_r(ordered_list, mid_point + 1, last_element_index, term)\n",
+    "        else:\n",
+    "            return mid_point"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst = [2, 4, 5, 12, 43, 54, 60, 77]\n",
+    "binary_search_r(store, 0, 7, 4)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "https://stackoverflow.com/questions/19989910/recursion-binary-search-in-python"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Recursive solution:\n",
+    "\n",
+    "def binary_search_recursive(arr, elem, start=0, end=None):\n",
+    "    if end is None:\n",
+    "        end = len(arr) - 1\n",
+    "    if start > end:\n",
+    "        return False\n",
+    "\n",
+    "    mid = (start + end) // 2\n",
+    "    if elem == arr[mid]:\n",
+    "        return mid\n",
+    "    if elem < arr[mid]:\n",
+    "        return binary_search_recursive(arr, elem, start, mid-1)\n",
+    "    # elem > arr[mid]\n",
+    "    return binary_search_recursive(arr, elem, mid+1, end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binary_search_recursive(lst, 43)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Iterative solution:\n",
+    "\n",
+    "def binary_search_iterative(arr, elem):\n",
+    "    start, end = 0, (len(arr) - 1)\n",
+    "    while start <= end:\n",
+    "        mid = (start + end) // 2\n",
+    "        if elem == arr[mid]:\n",
+    "            return mid\n",
+    "        if elem < arr[mid]:\n",
+    "            end = mid - 1\n",
+    "        else:  # elem > arr[mid]\n",
+    "            start = mid + 1\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binary_search_iterative(lst, 43)"
+   ]
   }
  ],
  "metadata": {
