--- a/searching/Interpolation_search.ipynb
+++ b/searching/Interpolation_search.ipynb
@@ -63,12 +63,21 @@
    "source": [
     "<b>References and resources:</b>\n",
     "- Python Data Structures and Algorithms by Benjamin Baka\n",
-    "- [Wikipedia](https://en.wikipedia.org/wiki/Interpolation_search)"
+    "- [Wikipedia](https://en.wikipedia.org/wiki/Interpolation_search)\n",
+    "- https://www.tutorialspoint.com/data_structures_algorithms/interpolation_search_algorithm.htm\n",
+    "- https://www.geeksforgeeks.org/interpolation-search/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -77,13 +86,14 @@
        "5.41747572815534"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def nearest_mid(input_list, lower_bound_index, upper_bound_index, search_value):\n",
+    "    \n",
     "    return (lower_bound_index + ((upper_bound_index - lower_bound_index) /\n",
     "           (input_list[upper_bound_index] - input_list[lower_bound_index])) *\n",
     "           (search_value - input_list[lower_bound_index]))\n",
@@ -95,13 +105,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "def interpolation_search(ordered_list, term):\n",
     "    \n",
     "    size_of_list = len(ordered_list) - 1\n",
@@ -109,38 +116,77 @@
     "    index_of_last_element = size_of_list\n",
     "    \n",
     "    while index_of_first_element <= index_of_last_element:\n",
-    "        mid_point = nearest_mid()"
+    "        mid_point = int(nearest_mid(ordered_list, index_of_first_element, index_of_last_element, term))\n",
+    "        \n",
+    "        if mid_point > index_of_last_element or mid_point < index_of_first_element:\n",
+    "            return None\n",
+    "        \n",
+    "        if ordered_list[mid_point] == term:\n",
+    "            return mid_point\n",
+    "        \n",
+    "        if term > ordered_list[mid_point]:\n",
+    "            index_of_first_element = mid_point + 1\n",
+    "        else:\n",
+    "            index_of_last_element = mid_point - 1\n",
+    "            \n",
+    "    if index_of_first_element > index_of_last_element:\n",
+    "        return None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "interpolation_search(lst, 230)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example 2"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Python program to implement interpolation search \n",
-    "  \n",
-    "# If x is present in arr[0..n-1], then returns \n",
-    "# index of it, else returns -1 \n",
-    "def interpolationSearch(arr, n, x): \n",
+    "# If x is present in arr[0..n-1], then returns pos, if not returns 'Element not found'\n",
+    "def interpolation_search(arr, x): \n",
     "    # Find indexs of two corners \n",
     "    lo = 0\n",
-    "    hi = (n - 1) \n",
+    "    hi = (len(arr) - 1) \n",
     "   \n",
-    "    # Since array is sorted, an element present \n",
-    "    # in array must be in range defined by corner \n",
+    "    # Since array is sorted, an element present in array must be in range defined by corner.\n",
     "    while lo <= hi and x >= arr[lo] and x <= arr[hi]: \n",
-    "        # Probing the position with keeping \n",
-    "        # uniform distribution in mind. \n",
-    "        pos  = lo + int(((float(hi - lo) / \n",
-    "            ( arr[hi] - arr[lo])) * ( x - arr[lo]))) \n",
+    "        # Probing the position with keeping uniform distribution in mind. \n",
+    "        pos  = lo + int(((float(hi - lo) / (arr[hi] - arr[lo])) * ( x - arr[lo]))) \n",
     "  \n",
     "        # Condition of target found \n",
     "        if arr[pos] == x: \n",
@@ -154,21 +200,11 @@
     "        else: \n",
     "            hi = pos - 1; \n",
     "      \n",
-    "    return -1\n",
+    "    return \"Element not found\"\n",
     "  \n",
-    "# Driver Code \n",
-    "# Array of items oin which search will be conducted \n",
-    "arr = [10, 12, 13, 16, 18, 19, 20, 21, \\ \n",
-    "                22, 23, 24, 33, 35, 42, 47] \n",
-    "n = len(arr) \n",
-    "  \n",
-    "x = 18 # Element to be searched \n",
-    "index = interpolationSearch(arr, n, x) \n",
-    "  \n",
-    "if index != -1: \n",
-    "    print \"Element found at index\",index \n",
-    "else: \n",
-    "    print \"Element not found\""
+    "\n",
+    "arr = [10, 12, 13, 16, 18, 19, 20, 21, 22, 23, 24, 33, 35, 42, 47] \n",
+    "interpolationSearch(arr, 20) "
    ]
   }
  ],
