--- a/searching/linear_search.ipynb
+++ b/searching/linear_search.ipynb
@@ -19,6 +19,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Uncomment to use inline pythontutor\n",
+    "\n",
+    "# from IPython.display import IFrame\n",
+    "\n",
+    "# IFrame('http://www.pythontutor.com/visualize.html#mode=display', height=750, width=750)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
