checking in work

--- a/sorting/bubble_sort.ipynb
+++ b/sorting/bubble_sort.ipynb
@@ -20,6 +20,7 @@
     "<b>References and resources:</b>\n",
     "- Python Data Structures and Algorithms by Benjamin Baka\n",
     "- [YouTube: Python: BubbleSort algorithm](https://www.youtube.com/watch?v=YHm_4bVOe1s)<sup>[1]</sup>\n",
+    "- [YouTube: Bubble sort in 2 minutes](https://www.youtube.com/watch?v=xli_FI7CuzA&index=4&list=PL9xmBV_5YoZOZSbGAXAPIq1BeUf4j20pl&t=0s)\n",
     "- https://www.geeksforgeeks.org/python-program-for-bubble-sort/\n",
     "- [Wikipedia](https://en.wikipedia.org/wiki/Bubble_sort)\n",
     "\n",
