--- a/sorting/insertion_sort.ipynb
+++ b/sorting/insertion_sort.ipynb
@@ -27,6 +27,7 @@
     "<b>References and resources:</b>\n",
     "- Python Data Structures and Algorithms by Benjamin Baka\n",
     "- [YouTube: Python: InsertionSort algorithm](https://www.youtube.com/watch?v=Nkw6Jg_Gi4w)<sup>[1]</sup>\n",
+    "- [YoutTube: Insertion sort in 2 minutes](https://www.youtube.com/watch?v=JU767SDMDvA&index=2&list=PL9xmBV_5YoZOZSbGAXAPIq1BeUf4j20pl&t=13s)\n",
     "- https://www.geeksforgeeks.org/insertion-sort/\n",
     "- [Wikipedia](https://en.wikipedia.org/wiki/Insertion_sort)\n",
     "\n",
