--- a/sorting/selection_sort.ipynb
+++ b/sorting/selection_sort.ipynb
@@ -26,6 +26,7 @@
     "<b>References and resources:</b>\n",
     "- Python Data Structures and Algorithms by Benjamin Baka\n",
     "- [YouTube: Python: SelectionSort algorithm](https://www.youtube.com/watch?v=mI3KgJy_d7Y)<sup>[1]</sup>\n",
+    "- [YouTube: Selection sort in 3 minutes](https://www.youtube.com/watch?v=g-PGLbMth_g&index=3&list=PL9xmBV_5YoZOZSbGAXAPIq1BeUf4j20pl&t=0s)\n",
     "- https://www.geeksforgeeks.org/selection-sort/\n",
     "- [Wikipedia](https://en.wikipedia.org/wiki/Selection_sort)\n",
     "\n",
