Selection and sorting

--- a/searching/Interpolation_search.ipynb
+++ b/searching/Interpolation_search.ipynb
@@ -21,40 +21,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Psudeo Code\n",
+    "<b>Psuedo code</b>\n",
     "\n",
-    "```\n",
-    "A → Array list\n",
-    "N → Size of A\n",
-    "X → Target Value\n",
+    "    A → Array list\n",
+    "    N → Size of A\n",
+    "    X → Target Value\n",
     "\n",
-    "Procedure Interpolation_Search()\n",
+    "    Procedure Interpolation_Search()\n",
     "\n",
-    "   Set Lo  →  0\n",
-    "   Set Mid → -1\n",
-    "   Set Hi  →  N-1\n",
+    "       Set Lo  →  0\n",
+    "       Set Mid → -1\n",
+    "       Set Hi  →  N-1\n",
     "\n",
-    "   While X does not match\n",
+    "       While X does not match\n",
     "   \n",
-    "      if Lo equals to Hi OR A[Lo] equals to A[Hi]\n",
-    "         EXIT: Failure, Target not found\n",
-    "      end if\n",
+    "          if Lo equals to Hi OR A[Lo] equals to A[Hi]\n",
+    "             EXIT: Failure, Target not found\n",
+    "          end if\n",
     "      \n",
-    "      Set Mid = Lo + ((Hi - Lo) / (A[Hi] - A[Lo])) * (X - A[Lo]) \n",
+    "          Set Mid = Lo + ((Hi - Lo) / (A[Hi] - A[Lo])) * (X - A[Lo]) \n",
     "\n",
-    "      if A[Mid] = X\n",
-    "         EXIT: Success, Target found at Mid\n",
-    "      else \n",
-    "         if A[Mid] < X\n",
-    "            Set Lo to Mid+1\n",
-    "         else if A[Mid] > X\n",
-    "            Set Hi to Mid-1\n",
-    "         end if\n",
-    "      end if\n",
-    "   End While\n",
+    "          if A[Mid] = X\n",
+    "             EXIT: Success, Target found at Mid\n",
+    "          else \n",
+    "             if A[Mid] < X\n",
+    "                Set Lo to Mid+1\n",
+    "             else if A[Mid] > X\n",
+    "                Set Hi to Mid-1\n",
+    "             end if\n",
+    "          end if\n",
+    "       End While\n",
     "\n",
-    "End Procedure\n",
-    "```"
+    "    End Procedure"
    ]
   },
   {
