selection and sorting

--- a/sorting/quick_sort.ipynb
+++ b/sorting/quick_sort.ipynb
@@ -17,6 +17,7 @@
     "- [YouTube: Quick Sort in 4 minutes](https://www.youtube.com/watch?v=Hoixgm4-P4M)\n",
     "- https://www.geeksforgeeks.org/quick-sort/\n",
     "- [Wikipedia](https://en.wikipedia.org/wiki/Quick_sort)\n",
+    "- [Medium.com article](https://medium.com/basecs/pivoting-to-understand-quicksort-part-1-75178dfb9313)\n",
     "\n",
     "<sub>[1] [code](https://github.com/joeyajames/Python/blob/master/Sorting%20Algorithms/quick_sort.py)<sub>"
    ]
