Types of algorithms

--- a/types_of_algorithms.ipynb
+++ b/types_of_algorithms.ipynb
@@ -4,21 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Types of algorithms"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Types of algorithms\n",
+    "\n",
     "<b>References and resources:</b>\n",
-    "- https://www.cis.upenn.edu/~matuszek/cit594-2003/Lectures/35-algorithm-types.ppt"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- https://www.cis.upenn.edu/~matuszek/cit594-2003/Lectures/35-algorithm-types.ppt\n",
+    "- Halim, Steven, and Felix Halim. Competitive Programming: The New Lower Bound of Programming Contests. Lulu, 2013.\n",
+    "  (https://www.quora.com/What-are-the-different-types-of-Algorithms)\n",
+    "  \n",
     "# Algorithms types considered:\n",
     " - Simple recursive algorithms\n",
     " - Backtracking algorithms\n",
@@ -27,63 +19,210 @@
     " - Greedy algorithms\n",
     " - Branch and bound algorithms\n",
     " - Brute force algorithms\n",
-    " - Randomized algorithms"
+    " - Randomized algorithms\n",
+    " \n",
+    "--- \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Simple recursive algorithms:</b>\n"
+    "# Simple recursive algorithms:\n",
+    " - Solves the base cases directly\n",
+    " - Recurs with a simple subproblem\n",
+    " - Does some extra work to convert the solution to the simpler  subproblem into a solution to the given problem.\n",
+    " \n",
+    "Examples:\n",
+    " - To count the number of elements in a list:\n",
+    " - To test if a value occurs in a list."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Backtracking algorithms</b>\n"
+    "# Backtracking algorithms\n",
+    "\n",
+    "These algorithms are based on a depth-first recursive search:\n",
+    " - Test to see if a solution has been found, and if so, returns it otherwise\n",
+    " - For each choice that can be made at this point,\n",
+    "   - Make that choice\n",
+    "   - Recur\n",
+    "   - If the recursion returns a solution, return it\n",
+    " - If no choices reamin, return failure\n",
+    " \n",
+    "Example:<br>\n",
+    "Color a map with no more than four colors.\n",
+    "\n",
+    "color (Country n)\n",
+    " - If all countries have been colored(n > number of countries) return success; otherwise,\n",
+    " - For each color c of four colors,\n",
+    "   - If country n i s not adjacent to a country that has been colored c\n",
+    "     - Color country n with color c\n",
+    "     - recursively color country n+1\n",
+    "     - If successful, return success\n",
+    "   - Return failure (if loop exits)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Divide and conquer algorithms</b>\n"
+    "# Divide and conquer algorithms\n",
+    "\n",
+    "Method that divides the problem into smaller parts and then solving those parts. Think binary search.\n",
+    "\n",
+    "--- \n",
+    "\n",
+    "A divide and conquer algorithm consists of two parts:\n",
+    " - Divide the problem into smaller subproblems of the same type, and solve these subproblems recursively\n",
+    " - Combine the soutions to the subproblems into a soution to the original problem\n",
+    " \n",
+    "Traditionally, an algorithm is only called divide and conquer if it contains two or more recursive calls.\n",
+    "\n",
+    "<i>Examples:</i>\n",
+    "Quicksort:\n",
+    " - Partition the array into two parts, and quicksort each of the parts\n",
+    " - No additional work is required to combine the two sorted parts\n",
+    " \n",
+    "Mergesort:\n",
+    " - Cut the array in half, and mergesort each half\n",
+    " - Combine the two sorted arrays into a single sorted array by merging them"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Dynamic programming algorithms</b>\n"
+    "# Dynamic programming algorithms\n",
+    "\n",
+    "Method that builds up to a solution using previously found sub-solutions. Definitely one of the more advanced techniques, but extremely powerful and applicable.\n",
+    " - Pros: finds the optimal solution to many problems in polynomial time (whereas brute force would take exponential)\n",
+    " - Cons: difficult to grasp and apply, takes time to understand the various states and recurrence\n",
+    "\n",
+    "---\n",
+    "\n",
+    "A dynamic programming algorithm remembers past results and uses them to find new results.\n",
+    "\n",
+    "Dynamic programming is gernally used for optimization problems.\n",
+    " - Multiple soutions exist to find the \"best one\"\n",
+    " - Requires \"optimal substructure\" and \" overlapping subproblems\"\n",
+    "   - Optimal subtructure: Optimal solution contains optimal solutions to subproblems\n",
+    "   - Overlapping subproblems: Solutions to subproblems can be stored and reused in a bottom-up fashion.\n",
+    "   \n",
+    "This differes from Divide and Conquer, where subproblems genrally need not overlap."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Greedy algorithms</b>\n"
+    "# Greedy algorithms\n",
+    "\n",
+    "Method that chooses the best option at the current time, without any consideration for the future.\n",
+    " - Pros: quick, simple, may obtain the best solution, or get kinda close\n",
+    " - Cons: most of the time, we will not obtain the best solution\n",
+    "\n",
+    "\n",
+    "--- \n",
+    "\n",
+    "An optimization problem is one in which you want to find, not just <i>a</i> solution, but the <i>best</i> solution.\n",
+    "\n",
+    "A \"greedy algorithm sometimes works well for optimization problems.\n",
+    "\n",
+    "A greedy algorithm works in phases; at each phase:\n",
+    " - You take the best you can get right now, without regard for future consequences\n",
+    " - You hope that by choosing a local optimum at each step, you will end up at a global optimum.\n",
+    " \n",
+    "Example:<br>\n",
+    "Counting money\n",
+    "\n",
+    "Supposed you want to count out a certain amount of money, using the fewest possinble bill and coins.\n",
+    "\n",
+    "A greedy algorithm would do this would be:\n",
+    "At each step, take the largest possible bill or coin that does not overshoot.\n",
+    " - Example: To make `$6.39`, you can choose:\n",
+    "   - A `$5` bill\n",
+    "   - A `$1` bill to make `$6`\n",
+    "   - A `25¢` coin to make `$6.25`\n",
+    "   - A `10¢` coin, to make `$6.35`\n",
+    "   - Four `1¢` coins to make `$6.39`\n",
+    "   \n",
+    "For U.S. money, the greedy algorithm always gives the optimum solution.\n",
+    "\n",
+    "A failure of the greedy algorithm:<br>\n",
+    "In some (fictional monetary system, \"Krons\" come in 1, 7 and 10 Kron coins.\n",
+    "\n",
+    "Using a greedy algorithm to count out `15 Krons` you would get:\n",
+    "   - A `10 Kron` coin\n",
+    "   - Five `1 Kron` coins totalling to `15 Krons`. This requres six coins\n",
+    "   \n",
+    "A better solution would be to use two `7 Kron` coins and a `1 Kron` coin.\n",
+    "\n",
+    "The greedy algorithm results in a solution but not in an optimal solution."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Branch and bound algorithms</b>\n"
+    "# Branch and bound algorithms\n",
+    "\n",
+    "Branch and bound algorithms are generally used for optimization problems.\n",
+    " - As the algorithm progresses, a tree of subproblems is formed\n",
+    " - The original problem is considered the \"root problem\"\n",
+    " - A method is used to construct an upper and lower bound for a given problem\n",
+    " - At each node, apply thr bounding methods\n",
+    "   - If the bounds nath, it is deemed a fesadible soultion to that particular subproblem\n",
+    "   - If bounds do <i>not</i> matchm partition the problem represented by that node, and make the two subproblems into children nodes\n",
+    " - Continue, using the best known feasible solution to trim sections of the tree, until all nodes have been solved or trimmed\n",
+    " \n",
+    "Example:\n",
+    "\n",
+    "Traveling salesman problem: A salesman has to visit each of n cities (at least) once each, and wants to minimize total distance travelled.\n",
+    " - Consider the root problem to be the problem of finidng the shortest route through a set of cities visiting each city once\n",
+    " - split the node into two child problems:\n",
+    "   - Shortest route visiting city `A` first\n",
+    "   - Shortest route <i>not</i> visiting city `A` first\n",
+    " - Continue subdividing similarily as the tree grows"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Brute force algorithms</b>\n"
+    "# Brute force algorithms/Complete search:\n",
+    "\n",
+    "A method that looks at all the possibilities and selects the best solution.\n",
+    " - Pros: simple, should always find the solution since you are looking at every possibility\n",
+    " - Cons: infeasible as the number of possibilities grows exponentially as the number of items increases\n",
+    "---\n",
+    "\n",
+    "A brute force algorithm simpluy tries all possibilities until a satisfactory solution is found.\n",
+    "\n",
+    "- Such an algorithm can be:\n",
+    "  - Optimizing: Find the best solution. This may require finding all solutions, or if a value for the best solution is knwon, it may stop when any best solution is found\n",
+    "    - Example: Finding the best path for a travelling salesman\n",
+    "  - Satisficing: Stop as soon aas a so,ution is foun that is <i>good enough</i>\n",
+    "    - Example: Finding a travelling salesman path that is within 10% optimal\n",
+    "    \n",
+    "Improving brute force algorithms:\n",
+    " - Often brute force algorithms require exponential time\n",
+    " - Various <i>heuristics</i> and <i>optimizations</i> can be used\n",
+    "   - Heuristic: A \"rule of thumb\" that helps you decide which possibilities to look at first\n",
+    "   - Optimization: In this case, a way to eliminate certain possibilites without fully exploring them"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Randomized algorithms</b>"
+    "# Randomized algorithms\n",
+    "\n",
+    "A randomized algorithm uses a random number at least once during the computation to make a decision:\n",
+    " - Example: In quicksort, using a random number to choose a pivot\n",
+    " - Example: Trying to factor a large prime by choosing random numbers as possible divisors"
    ]
   }
  ],
