Added stackless quick and merge sort

--- a/sorting/quick_sort.ipynb
+++ b/sorting/quick_sort.ipynb
@@ -18,8 +18,11 @@
     "- https://www.geeksforgeeks.org/quick-sort/\n",
     "- [Wikipedia](https://en.wikipedia.org/wiki/Quick_sort)\n",
     "- [Medium.com article](https://medium.com/basecs/pivoting-to-understand-quicksort-part-1-75178dfb9313)\n",
+    "- https://scotchka.github.io/blog/html/2018/11/08/stackless_quicksort.html<sup>[2]</sup>\n",
     "\n",
-    "<sub>[1] [code](https://github.com/joeyajames/Python/blob/master/Sorting%20Algorithms/quick_sort.py)<sub>"
+    "<sub>[1] [code](https://github.com/joeyajames/Python/blob/master/Sorting%20Algorithms/quick_sort.py)<sub>\n",
+    "    \n",
+    "<sub>[2] [Article](https://bertrandmeyer.com/2014/12/07/lampsort/)<sub>"
    ]
   },
   {
@@ -67,7 +70,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -141,6 +146,119 @@
     "lst = [5, 9, 1, 2, 4, 8, 6, 3, 7]\n",
     "print(lst)\n",
     "quick_sort(lst)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Stackless quicksort\n",
+    "Quicksort is a famous example of a recursive algorithm. Here is a sub-optimal implementation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def qsort(lst, start=0, end=None):\n",
+    "    if end is None:\n",
+    "        end = len(lst)\n",
+    "\n",
+    "    if end - start < 2:\n",
+    "        return\n",
+    "\n",
+    "    pivot_position = partition(lst, start, end)\n",
+    "\n",
+    "    qsort(lst, start, pivot_position)\n",
+    "    qsort(lst, pivot_position + 1, end)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The partition function chooses a pivot value and places it at the correct position, with smaller values to its left and larger values to its right. It also returns the final position of the pivot value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def partition(lst, start, end):\n",
+    "    pivot = lst[start]\n",
+    "    rest = lst[start + 1 : end]\n",
+    "\n",
+    "    left = [item for item in rest if item <= pivot]\n",
+    "    right = [item for item in rest if item > pivot]\n",
+    "\n",
+    "    lst[start:end] = left + [pivot] + right\n",
+    "\n",
+    "    return start + len(left)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For brevity, we use list slicing instead of swaps, but the discussion does not depend on how the partitioning is done.\n",
+    "\n",
+    "In the above implementation, observe that each recursive call stands alone, simply sorting a segment of the list. As this [article](https://bertrandmeyer.com/2014/12/07/lampsort/) points out, the recursive call stack serves merely to ensure that the list is divided into smaller segments until every item is a pivot or belongs to a segment of one item.\n",
+    "\n",
+    "Because the order in which different parts of the list is sorted is immaterial, we don’t need recursion or even a stack for that matter. Here is an implementation of quicksort using a set to track which segments are still to be sorted:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def qsort_stackless(lst):\n",
+    "    not_sorted = {(0, len(lst))}\n",
+    "\n",
+    "    while not_sorted:\n",
+    "        start, end = not_sorted.pop()\n",
+    "\n",
+    "        pivot_position = partition(lst, start, end)\n",
+    "\n",
+    "        if pivot_position - start > 0:\n",
+    "            not_sorted.add((start, pivot_position))\n",
+    "\n",
+    "        if end - (pivot_position + 1) > 0:\n",
+    "            not_sorted.add((pivot_position + 1, end))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The set not_sorted contains start and end indices of segments which remain to be sorted. Note that the pop method returns an arbitrary element of a set, which becomes empty when no unsorted segments remain. The list is then sorted. Let’s check a test case:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst = [3, 2, 1, 4, 5]\n",
+    "qsort_stackless(lst)\n",
+    "lst"
    ]
   }
  ],
