--- a/sorting/merge_sort.ipynb
+++ b/sorting/merge_sort.ipynb
@@ -30,6 +30,8 @@
     "- https://www.geeksforgeeks.org/merge-sort/\n",
     "- [Wikipedia](https://en.wikipedia.org/wiki/Merge_sort)\n",
     "\n",
+    "- https://scotchka.github.io/blog/html/2018/11/15/stackless_merge_sort.html\n",
+    "\n",
     "<sub>[1] [code](https://github.com/joeyajames/Python/blob/master/Sorting%20Algorithms/merge_sort.py)<sub>"
    ]
   },
@@ -134,6 +136,118 @@
     "lst = [38, 27, 43, 3, 9, 82, 10]\n",
     "print(lst)\n",
     "merge_sort(lst)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Stackless merge sort\n",
+    "\n",
+    "Merge sort divides a list into smaller lists of one or zero items, which are trivially sorted, and then merges them pairwise until one list remains. Here is a typical recursive implementation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mergesort(lst):\n",
+    "\n",
+    "    if len(lst) < 2:\n",
+    "        return lst[:]\n",
+    "\n",
+    "    mid = len(lst) // 2\n",
+    "\n",
+    "    return merge(mergesort(lst[:mid]), mergesort(lst[mid:]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that the base case returns a copy, not the original list, to be consistent with the general behavior. The merge function is:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def merge(left, right):\n",
+    "\n",
+    "    merged = []\n",
+    "\n",
+    "    while left and right:\n",
+    "        if left[0] <= right[0]:\n",
+    "            merged.append(left.pop(0))\n",
+    "        else:\n",
+    "            merged.append(right.pop(0))\n",
+    "\n",
+    "    merged.extend(left)\n",
+    "    merged.extend(right)\n",
+    "\n",
+    "    return merged"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For simplicity, we use pop(0) which is inefficient but easily remedied with indexing.\n",
+    "\n",
+    "Instead of dividing the list recursively, we can put each item into a list by itself, and then merge them iteratively:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mergesort_stackless(lst):\n",
+    "\n",
+    "    queue = [[item] for item in lst]\n",
+    "\n",
+    "    while len(queue) >= 2:\n",
+    "        left = queue.pop()\n",
+    "        right = queue.pop()\n",
+    "        merged = merge(left, right)\n",
+    "        queue.insert(0, merged)\n",
+    "\n",
+    "    return queue[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We maintain the individual lists in a queue. In each iteration, we take two lists from the queue, merge them, and put the combined list back in the queue. Eventually just one list remains, which is the desired result. The queue ensures that smaller lists are merged before larger ones, so that the pair being merged does not become too different in size - unbalanced pairs would degrade runtime.\n",
+    "\n",
+    "Checking a test case:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst = [3, 2, 1, 4, 5]\n",
+    "mergesort_stackless(lst)"
    ]
   }
  ],
