--- a/searching/binary_search.ipynb
+++ b/searching/binary_search.ipynb
@@ -18,12 +18,13 @@
     "<b>References and resources:</b>\n",
     "- Python Data Structures and Algorithms by Benjamin Baka\n",
     "- [Wikipedia](https://en.wikipedia.org/wiki/Linear_search)\n",
-    "- https://stackoverflow.com/questions/19989910/recursion-binary-search-in-python"
+    "- https://stackoverflow.com/questions/19989910/recursion-binary-search-in-python\n",
+    "- https://www.youtube.com/watch?v=zeULw-a7Mw8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +75,7 @@
        "4"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -118,14 +119,14 @@
        "1"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "lst = [2, 4, 5, 12, 43, 54, 60, 77]\n",
-    "binary_search_r(store, 0, 7, 4)"
+    "binary_search_r(lst, 0, 7, 4)"
    ]
   },
   {
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +170,7 @@
        "4"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +211,7 @@
        "4"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
